[gd_scene load_steps=6 format=2]

[ext_resource path="res://Floor5.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Danger" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 10.0
margin_right = 349.0
margin_bottom = 118.0
text = "Danger Level: 0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="Label" parent="HUD"]
margin_left = 960.0
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 41.0
grow_horizontal = 0
text = "Floor 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="Label" parent="HUD"]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Heading:"
align = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.347, 0, 0, 0, 0.977, 0, 0, 0, 0.252, -13, 1.01, -9 )

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]

[node name="Battle" parent="." instance=ExtResource( 3 )]

[node name="PartyNode" type="Node" parent="."]

[node name="Floor5" parent="." instance=ExtResource( 1 )]
data = {
"cells": PoolIntArray( 2, 0, 1, 65534, 0, 1, 65536, 0, 1, 65537, 0, 1, 131071, 0, 1, -65536, 0, 1, -65535, 0, 1, -1, 0, 1, 0, 1, 1, 1, 1, 1, 2, 1, 1, 65534, 1, 1, 65535, 1, 1, 0, 65514, 1, 1, 65514, 1, 2, 65514, 1, 3, 65514, 1, 65533, 65514, 1, 65534, 65514, 1, 65535, 65514, 1, 3, 65515, 1, 65533, 65515, 1, 65536, 65515, 1, 65537, 65515, 1, 65538, 65515, 1, 131070, 65515, 1, 131071, 65515, 1, -65536, 65515, 1, -65535, 65515, 1, -65534, 65515, 1, -2, 65515, 1, -1, 65515, 1, 3, 65516, 1, 65533, 65516, 1, 65536, 65516, 1, 65537, 65516, 1, 65538, 65516, 1, 131070, 65516, 1, 131071, 65516, 1, -65536, 65516, 1, -65535, 65516, 1, -65534, 65516, 1, -2, 65516, 1, -1, 65516, 1, 3, 65517, 1, 65533, 65517, 1, 65536, 65517, 1, 65537, 65517, 1, 65538, 65517, 1, 131070, 65517, 1, 131071, 65517, 1, -65536, 65517, 1, -65535, 65517, 1, -65534, 65517, 1, -2, 65517, 1, -1, 65517, 1, 3, 65518, 1, 65533, 65518, 1, 65536, 65518, 1, 65537, 65518, 1, 65538, 65518, 1, 131070, 65518, 1, 131071, 65518, 1, -65536, 65518, 1, -65535, 65518, 1, -65534, 65518, 1, -2, 65518, 1, -1, 65518, 1, 3, 65519, 1, 65533, 65519, 1, 65536, 65519, 1, 65537, 65519, 1, 65538, 65519, 1, 131070, 65519, 1, 131071, 65519, 1, -65536, 65519, 1, -65535, 65519, 1, -65534, 65519, 1, -2, 65519, 1, -1, 65519, 1, 1, 65520, 1, 2, 65520, 1, 3, 65520, 1, 65533, 65520, 1, 65534, 65520, 1, 65535, 65520, 1, 65536, 65520, 1, -65536, 65520, 1, 1, 65521, 1, 2, 65521, 1, 3, 65521, 1, 4, 65521, 1, 65534, 65521, 1, 65535, 65521, 1, 65536, 65521, 1, -65536, 65521, 1, 4, 65522, 1, 65533, 65522, 1, 65534, 65522, 1, 65536, 65522, 1, 65537, 65522, 1, 65538, 65522, 1, 65539, 65522, 1, 131071, 65522, 1, -65536, 65522, 1, -65535, 65522, 1, -65534, 65522, 1, -65533, 65522, 1, -1, 65522, 1, 0, 65523, 1, 2, 65523, 1, 4, 65523, 1, 65533, 65523, 1, 65537, 65523, 1, 65539, 65523, 1, 131070, 65523, 1, 131071, 65523, 1, -65535, 65523, 1, -65533, 65523, 1, -2, 65523, 1, -1, 65523, 1, 0, 65524, 1, 2, 65524, 1, 3, 65524, 1, 4, 65524, 1, 65532, 65524, 1, 65533, 65524, 1, 65535, 65524, 1, 65537, 65524, 1, 131070, 65524, 1, -65535, 65524, 1, -2, 65524, 1, 0, 65525, 1, 4, 65525, 1, 65532, 65525, 1, 65537, 65525, 1, 65538, 65525, 1, 65539, 65525, 1, 131069, 65525, 1, 131070, 65525, 1, 131071, 65525, 1, -65535, 65525, 1, -65534, 65525, 1, -65533, 65525, 1, -3, 65525, 1, -2, 65525, 1, -1, 65525, 1, 0, 65526, 1, 1, 65526, 1, 2, 65526, 1, 4, 65526, 1, 65532, 65526, 1, 65534, 65526, 1, 65539, 65526, 1, 131069, 65526, 1, 131071, 65526, 1, -65533, 65526, 1, -3, 65526, 1, -1, 65526, 1, 0, 65527, 1, 1, 65527, 1, 2, 65527, 1, 4, 65527, 1, 5, 65527, 1, 65531, 65527, 1, 65532, 65527, 1, 65534, 65527, 1, 65535, 65527, 1, 65539, 65527, 1, 131069, 65527, 1, -65533, 65527, 1, -3, 65527, 1, 5, 65528, 1, 65531, 65528, 1, 65536, 65528, 1, 65537, 65528, 1, 65538, 65528, 1, 65539, 65528, 1, 65540, 65528, 1, 131068, 65528, 1, 131069, 65528, 1, 131070, 65528, 1, 131071, 65528, 1, -65536, 65528, 1, -65535, 65528, 1, -65534, 65528, 1, -65533, 65528, 1, -65532, 65528, 1, -4, 65528, 1, -3, 65528, 1, -2, 65528, 1, -1, 65528, 1, 1, 65529, 1, 2, 65529, 1, 3, 65529, 1, 4, 65529, 1, 5, 65529, 1, 65531, 65529, 1, 65532, 65529, 1, 65533, 65529, 1, 65534, 65529, 1, 65535, 65529, 1, 65536, 65529, 1, -65536, 65529, 1, 3, 65530, 1, 65533, 65530, 1, 65536, 65530, 1, 65537, 65530, 1, 65538, 65530, 1, 131070, 65530, 1, 131071, 65530, 1, -65536, 65530, 1, -65535, 65530, 1, -65534, 65530, 1, -2, 65530, 1, -1, 65530, 1, 0, 65531, 1, 1, 65531, 1, 3, 65531, 1, 65533, 65531, 1, 65535, 65531, 1, 65538, 65531, 1, 131070, 65531, 1, -65534, 65531, 1, -2, 65531, 1, 3, 65532, 1, 65533, 65532, 1, 65536, 65532, 1, 65537, 65532, 1, 65538, 65532, 1, 131070, 65532, 1, 131071, 65532, 1, -65536, 65532, 1, -65535, 65532, 1, -65534, 65532, 1, -2, 65532, 1, -1, 65532, 1, 1, 65533, 1, 2, 65533, 1, 3, 65533, 1, 65533, 65533, 1, 65534, 65533, 1, 65535, 65533, 1, 65536, 65533, 1, -65536, 65533, 1, 2, 65534, 1, 65534, 65534, 1, 65536, 65534, 1, 65537, 65534, 1, 131071, 65534, 1, -65536, 65534, 1, -65535, 65534, 1, -1, 65534, 1, 2, 65535, 1, 65534, 65535, 1, 65536, 65535, 1, 65537, 65535, 1, 131071, 65535, 1, -65536, 65535, 1, -65535, 65535, 1, -1, 65535, 1 )
}

[connection signal="check_for_encounter" from="Player" to="." method="_on_Player_check_for_encounter"]
[connection signal="update_danger_level" from="Player" to="." method="_on_Player_update_danger_level"]
[connection signal="unpause" from="PauseMenu" to="." method="unpause"]
[connection signal="end_battle" from="Battle" to="." method="_on_Battle_end_battle"]
